@@ -2,6 +2,6 @@
   "strength": 2,
   "added_stress": 0.5,
   "added_recoil": 2,
-  "added_spread": 2,
+  "added_spread": 1,
   "maximum_power_levels": 4
 }
